--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Login Page</title>
-    <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="stylesheet" type="text/css" href="/css/auth.css">
   </head>
   <body>
     <div class="container">
@@ -18,6 +18,9 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+      <ul>
+        <li><a href="/register">Register</a></li>
+      </ul>
     </div>
   </body>
 </html>
