--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/css/auth.css">
     <title>Register</title>
 </head>
 <body>
-    
+    <div class="container">
+        <form action="/register" method="POST">
+          <h1>Register</h1>
+          <div class="form-group">
+            <label for="firstName">First Name:</label>
+            <input type="text" class="form-control" id="firstName" name="firstName" required>
+          </div>
+          <div class="form-group">
+            <label for="lastName">Last Name:</label>
+            <input type="text" class="form-control" id="lastName" name="lastName" required>
+          </div>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+          </div>
+          <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" class="form-control" id="password" name="password" required>
+          </div>
+          <div class="form-group">
+            <label for="password">Confirm Password:</label>
+            <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
+          </div>
+          <button type="submit" class="btn btn-primary">Sign Up</button>
+        </form>
+        <ul>
+          <li><a href="/login">Login</a></li>
+        </ul>
+      </div>
 </body>
 </html>
