--- a/views/student/home.ejs
+++ b/views/student/home.ejs
@@ -11,16 +11,15 @@
     <div class="wrapper">
         <nav class="sidebar">
             <ul><a href="/student/home">Home</a></ul>
-            <ul><a href="/student/home">Activities</a></ul>
-            <ul><a href="/student/home">Capstone Project</a></ul>
-            <ul><a href="/student/home">Group</a></ul>
-            <ul><a href="/student/home">Logout</a></ul>
+            <ul><a href="/student/activities">Activities</a></ul>
+            <ul><a href="/student/capstone-projects">Capstone Project</a></ul>
+            <ul><a href="/student/group">Group</a></ul>
+            <ul><form action="/logout" method="POST">
+                    <button type="submit">Logout</button>
+                </form>
+            </ul>
         </nav>
         <div class="main-content">
-            <header class="header">Welcome Home</header>
-            <div class="info">
-                <div>lorem lorem</div>
-            </div>
         </div>
     </div>
 </body>
