--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <form action="/register" method="POST">
+        <form action="/auth/register" method="POST">
           <h1>Register</h1>
           <div class="form-group">
             <label for="firstName">First Name:</label>
@@ -31,10 +31,17 @@
             <label for="password">Confirm Password:</label>
             <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
           </div>
+          <div class="form-group">
+            <p>Role:</p>
+            <label for="role">Student</label>
+            <input type="radio" class="form-control" id="role" name="role" value="Student"><br>
+            <label for="role">Faculty</label>
+            <input type="radio" class="form-control" id="role" name="role" value="Faculty"><br>
+          </div>
           <button type="submit" class="btn btn-primary">Sign Up</button>
         </form>
         <ul>
-          <li><a href="/login">Login</a></li>
+          <li><a href="/auth/login">Login</a></li>
         </ul>
       </div>
 </body>
