--- a/views/capstone-projects.ejs
+++ b/views/capstone-projects.ejs
@@ -29,9 +29,13 @@
                         <% if (role === "Student") { %>
                         <div class="form-control">
                             <h4>PDF File</h4>
-                            <input type="file" class="form-control" name="file" id="file">
+                            <input type="file" class="form-control" name="file" id="file" accept=".pdf">
                         </div>
                         <% } %>
+                        <div class="form-control">
+                            <h4>View File</h4>
+                            <iframe src="<%= form.filePath %>" frameborder="0" width="70%" height="500px"></iframe>
+                        </div>
                         <div class="card-actions">
                         <% if (role === "Student") { %>
                             <button class="btn" type="submit">Submit</button>
