--- a/views/capstone-projects.ejs
+++ b/views/capstone-projects.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/navigation.css">
+    <%- include ('partials/links.ejs') %>
     <link rel="stylesheet" href="/css/form-submit.css">
     <title>Home</title>
 </head>
 <body>
-    <%- include ('partials/navigation.ejs') %>
+  <%- include ('partials/navigation.ejs') %>
     
     <% if (forms.length > 0) { %>
         <div class="container">
