--- a/views/group.ejs
+++ b/views/group.ejs
@@ -4,10 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/navigation.css">
+    <%- include ('partials/links.ejs') %>
+    <link rel="stylesheet" href="/css/group.css">
     <title>Home</title>
 </head>
 <body>
     <%- include ('partials/navigation.ejs') %>
+</head>
+<body>
+  <div class="container">
+    <div class="card-grid">
+      <div class="card">
+        <h4>Group 1</h4>
+        <ul>
+          <li>John Doe</li>
+          <li>Jane Doe</li>
+          <li>Jim Smith</li>
+          <li>Joan Johnson</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h4>Group 2</h4>
+        <ul>
+          <li>Michael Jordan</li>
+          <li>Kobe Bryant</li>
+          <li>LeBron James</li>
+          <li>Shaquille O'Neal</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h4>Create Group</h4>
+        <form>
+            
+            <button>+</button>
+        </form>
+          
+        
+    </div>
 </body>
 </html>
