--- a/public/css/group.css
+++ b/public/css/group.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
-    width: 100%;
-    padding-left: 100px;
+    max-width: 100%;
+    padding-left: 250px;
     padding-top: 3rem;
 }
 
