--- a/views/group.ejs
+++ b/views/group.ejs
@@ -17,23 +17,24 @@
     <% if (group.length > 0) { %>
         <% for (let i = 0; i < group.length; i++) { %>
       <div class="card">
-        <form>
+        <form action="/group" method="POST">
             <h4>Group <%= i + 1 %></h4>
             <ul>
                 <li>John Doe</li>
             </ul>
             <button>Join Group</button>
+            <input type="hidden" value="<%= group[i].id %>" name="groupId">
         </form>
       </div>
       <% } %>
     <% } %>
+    <% if (role === 'Faculty') { %>
       <div class="card">
         <h4>Create Group</h4>
         <form action="/group" method="POST">
             <button>+</button>
         </form>
-          
-    
     </div>
+    <% } %>
 </body>
 </html>
