--- a/public/css/group.css
+++ b/public/css/group.css
@@ -30,12 +30,13 @@
   font-weight: 500;
 }
 
-ul {
+.card ul {
   list-style: none;
+  font-size: 1rem;
   padding: 0;
   margin: 0;
 }
 
-li {
+.card li {
   margin: 0.5rem 0;
 }
