--- a/views/group.ejs
+++ b/views/group.ejs
@@ -12,22 +12,28 @@
     <%- include ('partials/navigation.ejs') %>
 </head>
 <body>
+  
   <div class="container">
     <div class="card-grid">
-    <% if (group.length > 0) { %>
+      <% if (group.length > 0) { %>
         <% for (let i = 0; i < group.length; i++) { %>
-      <div class="card">
-        <form action="/group" method="POST">
-            <h4>Group <%= i + 1 %></h4>
-            <ul>
-                <li>John Doe</li>
-            </ul>
-            <button>Join Group</button>
-            <input type="hidden" value="<%= group[i].id %>" name="groupId">
-        </form>
-      </div>
-      <% } %>
-    <% } %>
+            <div class="card">
+                <form action="/group" method="POST">
+                    <h4>Group <%= i + 1 %></h4>
+                    <h6>Members: </h6>
+                    <ul>
+                        <% group[i].users.forEach(user => { %>
+                            <li><%= user.email %></li>
+                        <% }); %>
+                    </ul>
+                    <% if (!hasGroup || role === "Faculty") { %>
+                      <button>Join Group</button>
+                    <% } %>
+                    <input type="hidden" value="<%= group[i].id %>" name="groupId">
+                </form>
+            </div>
+        <% } %>
+    <% } %>    
     <% if (role === 'Faculty') { %>
       <div class="card">
         <h4>Create Group</h4>
@@ -36,5 +42,6 @@
         </form>
     </div>
     <% } %>
+    
 </body>
 </html>
