--- a/views/group.ejs
+++ b/views/group.ejs
@@ -26,7 +26,7 @@
                             <li><%= user.email %></li>
                         <% }); %>
                     </ul>
-                    <% if (!hasGroup || role === "Faculty") { %>
+                    <% if (!hasGroup && role === "Student") { %>
                       <button>Join Group</button>
                     <% } %>
                     <input type="hidden" value="<%= group[i].id %>" name="groupId">
