--- a/public/css/group.css
+++ b/public/css/group.css
@@ -1,42 +1,92 @@
 .container {
-    display: flex;
-    max-width: 100%;
-    padding-left: 250px;
-    padding-top: 3rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1rem;
+  margin-left: 250px;
 }
 
-.card-grid {
-  flex: 1;
+.top-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  width: 100%;
+  justify-content: space-between;
 }
 
 .card {
-  background-color: #f2f2f2;
-  border-radius: 10px;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-  width: 300px;
-  height: 300px;
-  margin: 1rem;
-  padding-bottom: 1.5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  font-size: 1.5rem;
-  font-weight: 500;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  margin-bottom: 1rem;
+  width: 100%;
 }
 
-.card ul {
-  list-style: none;
+.card-faculty {
+  flex-basis: 45%;
+}
+
+.card-container {
+  flex-basis: 45%;
+}
+
+.filter-card {
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+}
+
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 1rem;
+}
+
+.form-control {
+  margin-bottom: 1rem;
+}
+
+.container button {
+  background-color: #0070f3;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+
+.container button:hover {
+  background-color: #0060df;
+}
+
+label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
   font-size: 1rem;
-  padding: 0;
-  margin: 0;
+  margin-bottom: 0.5rem;
 }
 
-.card li {
-  margin: 0.5rem 0;
+select {
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.section {
+  font-weight: 600;
 }
