--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,13 +1,29 @@
 .container {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
     margin-left: 250px;
-    padding-top: 100px;
-}
-
-.container .main-list {
-    list-style-type: none;
-}
-
-.container .main-list .list-item {
-    padding-block: 10px;
-}
+  }
+  
+  .card {
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin: 10px;
+    max-width: 400px;
+    width: 100%;
+  }
+  
+  .card h4 {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 0;
+    margin-bottom: 10px;
+  }
+  
+  .card p {
+    margin: 0;
+    font-size: 16px;
+    line-height: 1.5;
+  }
+  
