--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -38,6 +38,16 @@
             <label for="role">Faculty</label>
             <input type="radio" class="form-control" id="role" name="role" value="Faculty"><br>
           </div>
+          <div class="form-group">
+            <label for="section">If student, choose section: </label>
+            <select name="section" id="section">
+              <option value="3ISA">3ISA</option>
+              <option value="3ISB">3ISB</option>
+              <option value="4ISA">4ISA</option>
+              <option value="4ISB">4ISB</option>
+              <option value="n/a">N/A</option>
+            </select>
+          </div>
           <button type="submit" class="btn btn-primary">Sign Up</button>
         </form>
         <ul>
