--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -22,7 +22,7 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a href="#">Approve documents</a>
+        <a href="/activities/approve-documents">Approve documents</a>
         <a href="/activities/create-form">Create Form</a>
         <a href="#">Assume Roles</a>
       </div>
