--- a/views/activities/create-form.ejs
+++ b/views/activities/create-form.ejs
@@ -13,7 +13,7 @@
 <body>
   <%- include ('../partials/navigation.ejs') %>
     <div class="container">
-        <form action="/activities" method="POST" >
+        <form action="/activities/create-form" method="POST" >
           <h1>Create Submission Form</h1>
           <div class="form-group">
             <label for="title">Title</label>
