--- a/views/faculty-activities/approve-documents.ejs
+++ b/views/faculty-activities/approve-documents.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href = "/css/nav-faculty.css">
+    <link rel="stylesheet" href = "/css/navigation.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">  
     <link rel="stylesheet" href="../css/form-submit.css">
@@ -25,7 +25,7 @@
         <option value="4ISB">4ISB</option>
       </select>
     </div>
-    <button id="filter-btn" class="btn btn-primary">Filter</button>
+    <button type="button" onclick="filterForms()">Filter</button>
   </div>
   
   <% if (forms.length > 0) { %>
@@ -36,6 +36,9 @@
             <article class="card section-<%= forms[i].section %>">
               <div class="form-control card-header">
                 <h1 class="form__title"><%= forms[i].title %></h1>
+              </div>
+              <div class="form-control card-header">
+                <h1 class="form__title"><%= forms[i].section %></h1>
               </div>
               <div class="form-control">
                 <h4>Status: <%= forms[i].submissions[j].status %></h4>
@@ -57,15 +60,14 @@
       <% } %>
     </div>
   <% } %>
-  
+
+
   <script>
-    const filterButton = document.getElementById('filter-btn');
-    const formContainer = document.getElementById('form-container');
-    const sectionFilter = document.getElementById('section');
-  
-    filterButton.addEventListener('click', () => {
-      const selectedSection = sectionFilter.value;
+    function filterForms() {
+      const formContainer = document.getElementById('form-container');
+      const sectionFilter = document.getElementById('section');
       const cards = formContainer.querySelectorAll('.card');
+      const selectedSection = sectionFilter.value;
   
       cards.forEach(card => {
         if (selectedSection === '' || card.classList.contains(`section-${selectedSection}`)) {
@@ -74,7 +76,7 @@
           card.style.display = 'none';
         }
       });
-    });
+    };
   </script>
   
   </body>
