--- a/views/partials/links.ejs
+++ b/views/partials/links.ejs
@@ -1,8 +1,3 @@
-<% if(role === "Student") { %>
-<link rel="stylesheet" href = "/css/nav-student.css">
-<% } %>
-<% if(role === "Faculty") { %>
-<link rel="stylesheet" href = "/css/nav-faculty.css">
-<% } %>
+<link rel="stylesheet" href = "/css/navigation.css">
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">  
