--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,4 +1,4 @@
- <div class="sidebar">
+ <!-- <div class="sidebar">
     <center>
         <img src="/img/IICS_Logo.png" class="image" alt = "">
     </center>
@@ -9,22 +9,28 @@
     <form action="/auth/logout" method="POST">
         <a1 href = "/auth/logout"> <i class="fa-solid fa-right-from-bracket"></i> <button>Logout</button></a>
     </form>
-</div> 
+</div>  -->
 
-<% if (role === "Faculty") { %>
 <div class="sidebar">
-    <center>
-      <img src="/img/IICS_Logo.png" class="image" alt="">
-    </center>
-    <a href="/home"><i class="fa-solid fa-house"></i><span>Home</span></a>
-    <div class="dropdown">
-      <button class="dropdown-btn"><i class="fa-solid fa-pen"></i>Activities
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="/activities/approve-documents">Approve documents</a>
-        <a href="/activities/create-form">Create Form</a>
-        <a href="#">Assume Roles</a>
+  <center>
+    <img src="/img/IICS_Logo.png" class="image" alt="">
+  </center>
+  <a href="/home"><i class="fa-solid fa-house"></i><span>Home</span></a>
+  <div class="dropdown">
+    <button class="dropdown-btn"><i class="fa-solid fa-pen"></i>Activities
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+        <% if (role === "Faculty") { %>
+          <a href="/activities/approve-documents">Approve documents</a>
+          <a href="/activities/create-form">Create Form</a>
+          <a href="#">Assume Roles</a>
+        <% } %>
+        <% if (role === "Student") { %>
+          <a href="/activities/submit">Submit</a>
+          <a href="/activities/monitor">Monitor</a>
+          <a href="/activities/revise">Revise</a>
+        <% } %>
       </div>
     </div>
     <a href="/capstone-projects"><i class="fa-solid fa-hammer"></i><span>Capstone projects</span></a>
@@ -35,4 +41,3 @@
   </div>
   
   <script src="/js/navigation.js"></script>
-  <% } %>
