Added Assign Role

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -24,7 +24,7 @@
         <% if (role === "Faculty") { %>
           <a href="/activities/approve-documents">Approve documents</a>
           <a href="/activities/create-form">Create Form</a>
-          <a href="#">Assume Roles</a>
+          <a href="/activities/roles">Assign Roles</a>
         <% } %>
         <% if (role === "Student") { %>
           <a href="/activities/submit">Submit</a>
